--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -2861,6 +2861,19 @@
   url       = {http://dl.acm.org/citation.cfm?id=2390716},
 }
 
+@Article{Bandelj2003,
+  author    = {Bandelj, N.},
+  title     = {How Method Actors Create Character Roles},
+  journal   = {Sociological Forum},
+  year      = {2003},
+  volume    = {18},
+  number    = {3},
+  pages     = {387-416},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
+  url       = {https://www.jstor.org/stable/3648889},
+}
+
 @Book{Banfield1982,
   title     = {Unspeakable sentences: narration and representation in the language of fiction},
   publisher = {Routledge},
@@ -4605,6 +4618,16 @@
   url       = {https://global.oup.com/academic/product/graph-theory-1736-1936-9780198539162},
 }
 
+@Book{Bignell2002,
+  title     = {Media semiotics: An introduction},
+  publisher = {Manchester University Press},
+  year      = {2002},
+  author    = {Bignell, J.},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
+  url       = {https://books.google.fr/books/?id=Fnm7AAAAIAAJ},
+}
+
 @Book{Bijleveld2014,
   title     = {The Psychological Science of Money},
   publisher = {Springer},
@@ -4830,6 +4853,19 @@
   doi       = {10.1016/s0074-7742(10)92008-4},
   owner     = {Vincent},
   timestamp = {2022.06.21},
+}
+
+@Article{Blakey2017,
+  author    = {Blakey, E.},
+  title     = {Showrunner as Auteur: Bridging the Culture / Economy Binary in Digital Hollywood},
+  journal   = {Open Cultural Studies},
+  year      = {2017},
+  volume    = {1},
+  number    = {1},
+  pages     = {321-332},
+  doi       = {10.1515/culture-2017-0029},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
 }
 
 @Electronic{Blambot2022,
@@ -5966,6 +6002,19 @@
   timestamp = {2021.09.21},
 }
 
+@Article{Braga2020,
+  author    = {Braga, P.},
+  title     = {The Italian Storytelling Approach to TV Seriality Compared to the US Method. A Case Study},
+  journal   = {Comunicazioni sociali},
+  year      = {2020},
+  volume    = {41},
+  number    = {3},
+  pages     = {389–403},
+  doi       = {10.26350/001200_000066},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
+}
+
 @InCollection{Braha2009,
   author    = {Braha, D. and Bar-Yam, Y.},
   title     = {Time-Dependent Complex Networks: Dynamic Centrality, Dynamic Motifs, and Cycles of Social Interactions},
@@ -6324,6 +6373,16 @@
   doi       = {10.1023/a:1010933404324},
   owner     = {Vincent},
   timestamp = {2019.04.13},
+}
+
+@Book{Brembilla2018,
+  title     = {Reading contemporary serial television universes: A narrative ecosystem framework},
+  publisher = {Routledge},
+  year      = {2018},
+  author    = {Brembilla, P. and De Pascalis, I. A.},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
+  url       = {https://www.routledge.com/Reading-Contemporary-Serial-Television-Universes-A-Narrative-Ecosystem/Brembilla-Pascalis/p/book/9780367590222},
 }
 
 @Book{Brendel2011,
@@ -6755,6 +6814,16 @@
   url       = {http://ftp.cs.toronto.edu/pub/gh/Budanitsky+Hirst-2001.pdf},
 }
 
+@Book{Budniakiewicz1992,
+  title     = {Fundamentals of story logic: Introduction to Greimassian semiotics},
+  publisher = {John Benjamins},
+  year      = {1992},
+  author    = {Budniakiewicz, T.},
+  doi       = {10.1075/sc.5},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
+}
+
 @InProceedings{Buechler2018,
   author    = {Büchler, M. and Franzini, G. and Kestemont, M. and Manjavacas, E.},
   title     = {The recreation of {Harry Potter}: Tracing style and content across novels, movie scripts and fanfiction},
@@ -6880,6 +6949,19 @@
   owner     = {Vincent},
   timestamp = {2021.12.27},
   url       = {https://proceedings.mlr.press/v81/buolamwini18a.html},
+}
+
+@Article{Buonanno2019,
+  author    = {Buonanno, M.},
+  title     = {Seriality: Development and disruption in the contemporary medial and cultural environment},
+  journal   = {Critical Studies in Television: The International Journal of Television Studies},
+  year      = {2019},
+  volume    = {14},
+  number    = {2},
+  pages     = {187-203},
+  doi       = {10.1177/1749602019834667},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
 }
 
 @Book{Buonomano2017,
@@ -7841,6 +7923,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2022.03.25},
   url       = {https://arxiv.org/abs/1909.02886v2},
+}
+
+@Article{CascajosaVirino2018,
+  author    = {Cascajosa-Virino, C.},
+  title     = {The emergence of the showrunner in global contemporary {TV} fiction: The case of {Pau Freixas} in {Catalonia}},
+  journal   = {Catalan Journal of Communication \& Cultural Studies},
+  year      = {2018},
+  volume    = {10},
+  number    = {1},
+  pages     = {125-132},
+  doi       = {10.1386/cjcs.10.1.125_1},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
 }
 
 @Article{Casey2010,
@@ -9743,6 +9838,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2019.04.12},
   url       = {https://psycnet.apa.org/record/1961-35078-000},
+}
+
+@Article{Collantes2011,
+  author    = {Ruiz Collantes, X. and Obradors, M. and Pujadas, E. and Ferrés, J. and Pérez, Ó.},
+  title     = {Qualitative-quantitative analysis of narrative structures: The narrative roles of immigrants in Spanish television series},
+  journal   = {Semiotica},
+  year      = {2011},
+  volume    = {2011},
+  number    = {184},
+  doi       = {10.1515/semi.2011.024},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
 }
 
 @Article{Collins1975,
@@ -11895,6 +12002,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2019.03.31},
 }
 
+@Article{DillmanCarpentier2015,
+  author    = {Dillman Carpentier, F. R. and Rogers, R. P. and Barnard, L.},
+  title     = {Eliciting Behavior From Interactive Narratives: Isolating the Role of Agency in Connecting With and Modeling Characters},
+  journal   = {Journal of Broadcasting \& Electronic Media},
+  year      = {2015},
+  volume    = {59},
+  number    = {1},
+  pages     = {76-93},
+  doi       = {10.1080/08838151.2014.998222},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
+}
+
 @Book{Dillon1948,
   title     = {Early Irish Literature},
   publisher = {University of Chicago Press},
@@ -12516,6 +12636,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://arxiv.org/abs/math/0001057},
 }
 
+@Article{Doyle1998,
+  author    = {Doyle, C. L.},
+  title     = {The Writer Tells: The Creative Process in the Writing of Literary Fiction},
+  journal   = {Creativity Research Journal},
+  year      = {1998},
+  volume    = {11},
+  number    = {1},
+  pages     = {29-37},
+  doi       = {10.1207/s15326934crj1101_4},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
+}
+
 @Book{Dozeman2006,
   title     = {A farewell to the Yahwist?},
   publisher = {Society of Biblical Literature},
@@ -12583,6 +12716,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.4102/hts.v68i1.1268},
   owner     = {Vincent},
   timestamp = {2021.09.21},
+}
+
+@Book{Dreyfus2014,
+  title     = {Michel Foucault: Beyond structuralism and hermeneutics},
+  publisher = {University of Chicago Press},
+  year      = {2014},
+  author    = {Dreyfus, H. L. and Rabinow, P.},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
+  url       = {https://press.uchicago.edu/ucp/books/book/chicago/M/bo3638224.html},
 }
 
 @Article{Drieger2013,
@@ -13348,6 +13491,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2019.08.21},
   url       = {https://www.press.uchicago.edu/ucp/books/book/chicago/E/bo10012984.html},
+}
+
+@Article{Eden2014,
+  author    = {Eden, A. and Oliver, M. B. and Tamborini, R. and Limperos, A. and Woolley, J.},
+  title     = {Perceptions of Moral Violations and Personality Traits Among Heroes and Villains},
+  journal   = {Mass Communication and Society},
+  year      = {2014},
+  volume    = {18},
+  number    = {2},
+  pages     = {186-208},
+  doi       = {10.1080/15205436.2014.923462},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
 }
 
 @Article{Eden2016,
@@ -16820,6 +16976,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2020.03.16},
 }
 
+@Article{Garza2020,
+  author    = {Garza, P. and Yañez, C. and Arenas, S. and Padilla, F.},
+  title     = {Beyond words: Quantitative analysis of complex serial visual narrative through interaction-based modeled observations},
+  journal   = {Revista Panamericana de Comunicación},
+  year      = {2020},
+  volume    = {2},
+  number    = {2},
+  pages     = {21-34},
+  doi       = {10.21555/rpc.v0i2.2333},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
+}
+
 @Article{Gasca2000,
   author    = {Gasca, M. and Sauer, T.},
   title     = {Polynomial interpolation in several variables},
@@ -16895,6 +17064,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner       = {Vincent},
   timestamp   = {2022.08.30},
   url         = {https://hal-univ-paris8.archives-ouvertes.fr/hal-03754913},
+}
+
+@Article{Gavin1996,
+  author    = {Gavin, R.},
+  title     = {``The Lion King'' and ``Hamlet'': A Homecoming for the Exiled Child},
+  journal   = {English Journal},
+  year      = {1996},
+  volume    = {85},
+  number    = {3},
+  pages     = {55},
+  doi       = {10.2307/820106},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
 }
 
 @InProceedings{Ge2009,
@@ -17975,6 +18157,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2021.09.20},
 }
 
+@Book{Gorton2009,
+  title     = {Media Audiences: Television, Meaning and Emotion},
+  publisher = {Edinburgh University Press},
+  year      = {2009},
+  author    = {Gorton, K.},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
+  url       = {https://www.jstor.org/stable/10.3366/j.ctt1r26bz},
+}
+
 @InProceedings{Goto2008,
   author    = {Goto, J. and Yagi, Y. and Aizawa, A. and Sekine, S.},
   title     = {Generation of correlation charts from TV programs based on anaphora resolution},
@@ -18458,6 +18650,20 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2019.04.06},
 }
 
+@Article{Gregori-Signes2017,
+  author    = {Gregori-Signes, C.},
+  title     = {``Apparently, women don't know how to operate doors'': A corpus-based analysis of women stereotypes in the {TV} series 3rd Rock from the Sun},
+  journal   = {International Journal of English Studies},
+  year      = {2017},
+  volume    = {17},
+  number    = {2},
+  pages     = {21},
+  doi       = {10.6018/ijes/2017/2/257311},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
+  url       = {https://doi.org/10.6018/ijes/2017/2/257311},
+}
+
 @Article{Gregory2010,
   author    = {Gregory, Steve},
   title     = {Finding overlapping communities in networks by label propagation},
@@ -18660,6 +18866,29 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1504/ijart.2011.037769},
   owner     = {Vincent},
   timestamp = {2021.12.15},
+}
+
+@Article{Grizzard2017,
+  author    = {Grizzard, M. and Huang, J. and Fitzgerald, K. and Ahn, C. and Chu, H.},
+  title     = {Sensing Heroes and Villains: Character-Schema and the Disposition Formation Process},
+  journal   = {Communication Research},
+  year      = {2017},
+  volume    = {45},
+  number    = {4},
+  pages     = {479-501},
+  doi       = {10.1177/0093650217699934},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
+}
+
+@Book{Grodal1999,
+  title     = {Moving pictures: A new theory of film genres, feelings, and cognition},
+  publisher = {Oxford University Press},
+  year      = {1999},
+  author    = {Grodal, T.},
+  doi       = {10.1093/acprof:oso/9780198159834.001.0001},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
 }
 
 @InProceedings{Groh2009,
@@ -19840,6 +20069,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2022.06.28},
 }
 
+@Article{Harris2009,
+  author    = {Harris, D. and Willoughby, H.},
+  title     = {Resuscitation on television: Realistic or ridiculous? A quantitative observational analysis of the portrayal of cardiopulmonary resuscitation in television medical drama},
+  journal   = {Resuscitation},
+  year      = {2009},
+  volume    = {80},
+  number    = {11},
+  pages     = {1275-1279},
+  doi       = {10.1016/j.resuscitation.2009.07.008},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
+}
+
 @Book{Harris2010,
   title     = {Shakespeare and Literary Theory},
   publisher = {Oxford University Press},
@@ -20036,6 +20278,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1002/asi.21087},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+}
+
+@Book{Hawkes2003,
+  title     = {Structuralism and semiotics},
+  publisher = {Routledge},
+  year      = {2003},
+  author    = {Hawkes, T.},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
+  url       = {https://monoskop.org/images/3/38/Hawkes_Terence_Structuralism_and_Semiotics_2003.pdf},
 }
 
 @Book{Hazen2004,
@@ -24044,6 +24296,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://drops.dagstuhl.de/opus/volltexte/2015/5284/},
 }
 
+@Article{Kartyas2016,
+  author    = {Kartyas, P.},
+  title     = {Examination of the Correlation Between Self-Efficacy and Agency Based on the Content Analysis of Role Play Texts},
+  journal   = {Transylvanian Journal of Psychology},
+  year      = {2016},
+  volume    = {17},
+  number    = {2},
+  pages     = {151-180},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
+  url       = {https://www.proquest.com/openview/35cd6bb77d00bfec1521abbed7f9e562/1},
+}
+
 @Article{Kastan1985,
   author    = {Kastan, D. S.},
   title     = {All's Well That Ends Well and the Limits of Comedy},
@@ -25110,6 +25375,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.05},
 }
 
+@Article{Kleemans2017,
+  author    = {Kleemans, M. and Eden, A. and Daalmans, S. and van Ommen, M. and Weijers, A.},
+  title     = {Explaining the role of character development in the evaluation of morally ambiguous characters in entertainment media},
+  journal   = {Poetics},
+  year      = {2017},
+  volume    = {60},
+  pages     = {16-28},
+  doi       = {10.1016/j.poetic.2016.10.003},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
+}
+
 @InProceedings{Klein2003,
   author    = {Klein, D. and Manning, C. D.},
   title     = {Accurate unlexicalized parsing},
@@ -25849,6 +26126,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.22148/16.032},
   owner     = {Vincent},
   timestamp = {2021.06.24},
+}
+
+@Article{Krakowiak2013,
+  author    = {Krakowiak, K. M. and Tsay-Vogel, M.},
+  title     = {What Makes Characters' Bad Behaviors Acceptable? The Effects of Character Motivation and Outcome on Perceptions, Character Liking, and Moral Disengagement},
+  journal   = {Mass Communication and Society},
+  year      = {2013},
+  volume    = {16},
+  number    = {2},
+  pages     = {179-199},
+  doi       = {10.1080/15205436.2012.690926},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
 }
 
 @Book{Kranz2008,
@@ -26842,6 +27132,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1111/j.1467-8659.2011.01898.x},
   owner     = {Vincent},
   timestamp = {2020.08.11},
+}
+
+@Article{Landis1977,
+  author    = {Landis, J. R. and Koch, G. G.},
+  title     = {The Measurement of Observer Agreement for Categorical Data},
+  journal   = {Biometrics},
+  year      = {1977},
+  volume    = {33},
+  number    = {1},
+  pages     = {159},
+  doi       = {10.2307/2529310},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
 }
 
 @Book{Langlet2006,
@@ -28887,6 +29190,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.09.19},
 }
 
+@Article{Lieberman2009,
+  author    = {Lieberman, E. A. and Neuendorf, K. A. and Denny, J. and Skalski, P. D. and Wang, J.},
+  title     = {The Language of Laughter: A Quantitative/Qualitative Fusion Examining Television Narrative and Humor},
+  journal   = {Journal of Broadcasting \& Electronic Media},
+  year      = {2009},
+  volume    = {53},
+  number    = {4},
+  pages     = {497-514},
+  doi       = {10.1080/08838150903336141},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
+}
+
 @Article{Lienhart1997,
   author    = {Lienhart, R. and Pfeiffer, S. and Effelsberg, W.},
   title     = {Video abstracting},
@@ -29468,6 +29784,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2022.11.26},
   url       = {https://arxiv.org/abs/2210.15332},
+}
+
+@Book{Livingstone2013,
+  title     = {Making sense of television: The psychology of audience interpretation},
+  publisher = {Routledge},
+  year      = {2013},
+  author    = {Livingstone, S.},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
+  url       = {https://www.routledge.com/Making-Sense-of-Television-The-Psychology-of-Audience-Interpretation/Livingstone/p/book/9780415185363},
 }
 
 @Article{LoBue2015,
@@ -30803,6 +31129,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2022.11.15},
   url       = {https://www.jstor.org/stable/40404229},
+}
+
+@Article{Mann2008,
+  author    = {Mann, B. L.},
+  title     = {The evolution of multimedia sound},
+  journal   = {Computers \& Education},
+  year      = {2008},
+  volume    = {50},
+  number    = {4},
+  pages     = {1157-1173},
+  doi       = {10.1016/j.compedu.2006.11.002},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
 }
 
 @Book{Manning1999,
@@ -32360,6 +32699,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1093/acprof:oso/9780199797202.001.0001},
   owner     = {Vincent},
   timestamp = {2021.09.22},
+}
+
+@Article{Mead1990,
+  author    = {Mead, G.},
+  title     = {The representation of fictional character},
+  journal   = {Style},
+  year      = {1990},
+  volume    = {24},
+  number    = {3},
+  pages     = {440-452},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
+  url       = {https://www.jstor.org/stable/42945872},
 }
 
 @Article{Mednick1968,
@@ -35303,6 +35655,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1103/PhysRevE.64.016132},
   owner     = {Vincent},
   timestamp = {2010.06.03},
+}
+
+@Article{Newman2006d,
+  author    = {Newman, M. Z.},
+  title     = {From Beats to Arcs: Toward a Poetics of Television Narrative},
+  journal   = {Velvet Light Trap},
+  year      = {2006},
+  volume    = {58},
+  pages     = {16-28},
+  doi       = {10.1353/vlt.2006.0033},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
 }
 
 @InCollection{Newman2008a,
@@ -40823,6 +41187,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.23},
 }
 
+@Article{Rojas2019,
+  author    = {Rojas, T. A.},
+  title     = {Transmedia Storytelling and Construction of Fictional Worlds: Aliados Series as Case Study},
+  journal   = {Correspondencias \& Análisis},
+  year      = {2019},
+  volume    = {9},
+  pages     = {37-50},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
+  url       = {https://dialnet.unirioja.es/servlet/articulo?codigo=7073242},
+}
+
 @InCollection{RojasLamorena2021,
   author    = {Rojas-Lamorena, Á. J. and del Barrio-García, S. and Alcántara-Pilar, J. M.},
   title     = {No More Drama: Genres and Subgenres of TV Series},
@@ -41784,6 +42160,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://knopfdoubleday.com/tag/orientalism/},
 }
 
+@Book{Sainsbury2009,
+  title     = {Fiction and fictionalism},
+  publisher = {Routledge},
+  year      = {2009},
+  author    = {Sainsbury, R. M.},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
+  url       = {https://www.routledge.com/Fiction-and-Fictionalism/Sainsbury/p/book/9780415774352},
+}
+
 @Article{Saint-Amour2018,
   author    = {Saint-Amour, P.},
   title     = {Weak Theory, Weak Modernism},
@@ -42048,6 +42434,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2022.08.06},
   url       = {https://naacl2022-srw.github.io/non_arch_papers/72.pdf},
+}
+
+@InProceedings{Sang2022a,
+  author    = {Sang, Y. and Mou, X. and Yu, M. and Wang, D. and Li, J. and Stanton, J.},
+  title     = {MBTI Personality Prediction for Fictional Characters Using Movie Scripts},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2022},
+  owner     = {Vincent},
+  timestamp = {2022.10.25},
+  url       = {https://arxiv.org/abs/2210.10994},
 }
 
 @Article{Sanjek1974,
@@ -43271,6 +43667,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.12},
 }
 
+@Article{Seidman1981,
+  author    = {Seidman, S. A.},
+  title     = {On the contributions of music to media productions},
+  journal   = {Educational technology research and development},
+  year      = {1981},
+  volume    = {29},
+  pages     = {49-61},
+  doi       = {10.1007/bf02765192},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
+}
+
 @Article{Seidman1983,
   author    = {Seidman, S. B.},
   title     = {Network structure and minimum degree},
@@ -44099,6 +44507,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2012.06.04},
 }
 
+@InProceedings{Silva2015,
+  author    = {Silva, P. and Amer, Y. and Tsikerdanos, W. and Shedd, J. and Restrepo, I. and Murray, J.},
+  title     = {A Game of Thrones Companion},
+  booktitle = {ACM International Conference on Interactive Experiences for TV and Online Video},
+  year      = {2015},
+  pages     = {167-172},
+  doi       = {10.1145/2745197.2755519},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
+}
+
 @InProceedings{Silva2016,
   author    = {Silva, Y. N. and Rich, C. and Hall, D.},
   title     = {{BullyBlocker}: Towards the identification of cyberbullying in social networking sites},
@@ -44514,6 +44933,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1088/1742-5468/2006/02/p02006},
   owner     = {Vincent},
   timestamp = {2019.03.27},
+}
+
+@Article{Smith2006a,
+  author    = {Smith, G. M.},
+  title     = {A Case of Cold Feet: Serial Narration and the Character Arc},
+  journal   = {Journal of British Cinema and Television},
+  year      = {2006},
+  volume    = {3},
+  number    = {1},
+  pages     = {82-94},
+  doi       = {10.3366/jbctv.2006.3.1.82},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
 }
 
 @InCollection{Smith2007a,
@@ -46090,6 +46522,31 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.03.17},
 }
 
+@Article{Sundet2016,
+  author    = {Sundet, V. S.},
+  title     = {Still `Desperately seeking the audience'? Audience making in the age of media convergence (the {Lilyhammer} experience)},
+  journal   = {Northern Lights: Film \& Media Studies Yearbook},
+  year      = {2016},
+  volume    = {14},
+  number    = {1},
+  pages     = {11-27},
+  doi       = {10.1386/nl.14.1.11_1},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
+}
+
+@InCollection{Sundet2017,
+  author    = {Sundet, V. S.},
+  title     = {Co-produced television drama and the cost of transnational `success': The making of Lilyhammer},
+  booktitle = {Building Successful and Sustainable Film and Television Businesses: A Cross-National Perspective},
+  publisher = {Intellect},
+  year      = {2017},
+  pages     = {67-88},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
+  url       = {https://www.researchgate.net/publication/309480039_Co-produced_television_drama_and_the_cost_of_transnational_'success'_The_making_of_Lilyhammer},
+}
+
 @Article{Sung2012,
   author    = {Sung, K. and Gordon, B. and Vannorsdall, T. D. and Ledoux, K. and Pickett, E. J. and Pearlson, G. D. and Schretlen, D. J.},
   title     = {Semantic Clustering of Category Fluency in Schizophrenia Examined with Singular Value Decomposition},
@@ -46851,6 +47308,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.12},
   url       = {https://www.jstor.org/stable/41153213},
+}
+
+@Article{Tefertiller2019,
+  author    = {Tefertiller, A. and Sheehan, K.},
+  title     = {{TV} in the Streaming Age: Motivations, Behaviors, and Satisfaction of Post-Network Television},
+  journal   = {Journal of Broadcasting \& Electronic Media},
+  year      = {2019},
+  volume    = {63},
+  number    = {4},
+  pages     = {595-616},
+  doi       = {10.1080/08838151.2019.1698233},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
 }
 
 @Article{Tehrani2013,
@@ -48659,6 +49129,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2010.06.03},
 }
 
+@InProceedings{Veale2014,
+  author    = {Veale, T.},
+  title     = {Coming good and breaking bad: Generating transformative character arcs for use in compelling stories},
+  booktitle = {5th international conference on computational creativity},
+  year      = {2014},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
+  url       = {http://haddock.ucd.ie/Papers/Coming%20Good%20and%20Breaking%20Bad.pdf},
+}
+
 @Electronic{Ved2018,
   author       = {Ved, M.},
   month        = {06},
@@ -49032,6 +49512,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.11},
   url       = {https://cmc.marmot.org/Record/.b2802400x},
+}
+
+@Article{Vogler2017,
+  author    = {Vogler, C.},
+  title     = {{Joseph Campbell} Goes to the Movies: The Influence of the Hero's Journey in Film Narrative},
+  journal   = {Journal of Genius and Eminence},
+  year      = {2017},
+  volume    = {2},
+  number    = {2},
+  pages     = {9-22},
+  doi       = {10.18536/jge.2017.02.2.2.02},
+  owner     = {Vincent},
+  timestamp = {2022.11.28},
 }
 
 @InProceedings{Voita2020,
